pg_admin_dashboard/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-admin-dashboard
  namespace: pg-admin-dashboard
spec:
  selector:
    app: pg-admin-dashboard
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
